samples/_failures_safe/1761798014_70ee1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f1be2d8.c: In function ‘main’:
./samples/SAFE/__tmp_4f1be2d8.c:178:9: error: ‘str’ undeclared (first use in this function)
  178 |     if (str
      |         ^~~
./samples/SAFE/__tmp_4f1be2d8.c:178:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4f1be2d8.c:178:12: error: expected ‘)’ at end of input
  178 |     if (str
      |        ~   ^
      |            )
./samples/SAFE/__tmp_4f1be2d8.c:178:5: error: expected declaration or statement at end of input
  178 |     if (str
      |     ^~
